Fixed a layout glitch on IE.

--- a/docs/src/doxygen-base-stylesheet.css
+++ b/docs/src/doxygen-base-stylesheet.css
@@ -564,11 +564,12 @@ table.memberdecls {
     border-top: 1px solid #b5b5b5;
     border-left: 1px solid #b5b5b5;
     border-right: 1px solid #b5b5b5;
+
     padding: 6px 0px 6px 0px;
     color: #253555;
     font-weight: bold;
     text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.9);
-    /* opera specific markup */
+
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
@@ -576,7 +577,11 @@ table.memberdecls {
     background-color: #dfdfdf;
     -moz-box-shadow: 5px 5px 5px #bbb;
     -webkit-box-shadow: 5px 5px 5px #bbb;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e5e5e5', endColorstr='#cccccc');
+
+    /* Tried, but this messes up the drawing by not being layered properly.
+       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e5e5e5', endColorstr='#cccccc');
+    */
+
     background: -moz-linear-gradient(top, #e5e5e5, #ccc); 
     background: -webkit-gradient(linear, left top, left bottom, from(#e5e5e5), to(#bbb)); 
     background-image: linear-gradient(top, #e5e5e5, #ccc);
